// Copyright (c) farm-ng, inc.
//
// Licensed under the Amiga Development Kit License (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://github.com/farm-ng/amiga-dev-kit/blob/main/LICENSE
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "farm_ng/core/linalg.proto";
import public "farm_ng/core/timestamp.proto";

package farm_ng.geometry.proto;

// A position and orientation for an object or reference frame in 3D space
message Pose3 {
  farm_ng.core.proto.Timestamp timestamp = 1;
  farm_ng.core.proto.Vec3F32 translation = 2;
  Quaternion rotation = 3;
  string frame_id = 4;
}

message Quaternion {
  double x = 1;
  double y = 2;
  double z = 3;
  double w = 4;
}